# stravaweb

./: .gitignore  README.md  activities_explore.ipynb  activities_explore_folium.ipynb  activities_kepler.ipynb  index.html  nn_2020-07-24-26.html  pyproject.toml
etc/: base_config.yaml  config.yaml.example
stravaweb/: client.py  club_activities.py  settings.py
